@@ -1,4 +1,4 @@
-package org.example;
+package org.example.chapter6;
 
 import org.example.model.Order;
 import org.example.model.User2;
@@ -7,34 +7,37 @@ import java.time.LocalDateTime;
 import java.time.ZoneId;
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
-public class Chapter6_4 {
+public class Chapter6_5 {
     public static void main(String[] args) {
+        // sorted
+        List<Integer> list = List.of(3, -5, 7, 4);
+        List<Integer> sortedList = list.stream().sorted().toList();
+        System.out.println(sortedList);
+
         User2 user1 = new User2()
                 .setId(101)
-                .setName("Alice")
+                .setName("Paul")
                 .setVerified(true)
                 .setEmailAddress("alice@email.co.kr");
 
         User2 user2 = new User2()
                 .setId(102)
-                .setName("Bob")
+                .setName("David")
                 .setVerified(false)
                 .setEmailAddress("bob@email.co.kr");
 
         User2 user3 = new User2()
                 .setId(103)
-                .setName("Charlie")
+                .setName("John")
                 .setVerified(false)
                 .setEmailAddress("charlie@email.co.kr");
 
         List<User2> users = Arrays.asList(user1, user2, user3);
-        List<String> emails = users.stream()
-                .filter(user -> !user.isVerified())
-                .map(User2::getEmailAddress)
-                .collect(Collectors.toList());
-        System.out.println(emails);
+        List<User2> sortedUsers = users.stream()
+                .sorted((u1, u2) -> u1.getName().compareTo(u2.getName()))
+                .toList();
+        System.out.println(sortedUsers);
 
         LocalDateTime now = LocalDateTime.now(ZoneId.of("Asia/Seoul"));
         Order order1 = new Order()
@@ -64,16 +67,9 @@ public class Chapter6_4 {
                 .setCreatedAt(now.minusHours(10));
 
         List<Order> orders = Arrays.asList(order1, order2, order3, order4, order5);
-        List<Long> userIds = orders.stream()
-                .filter(order -> order.getStatus() == Order.OrderStatus.ERROR)
-                .map(Order::getCreatedByUserId)
-                .collect(Collectors.toList());
-        System.out.println(userIds);
-
-        List<Order> ordersInErrorStatusIn24hrs = orders.stream()
-                .filter(order -> order.getStatus() == Order.OrderStatus.ERROR)
-                .filter(order -> order.getCreatedAt().isAfter(now.minusHours(24)))
-                .collect(Collectors.toList());
-        System.out.println(ordersInErrorStatusIn24hrs);
+        List<Order> sortedOrders = orders.stream()
+                .sorted((o1, o2) -> o1.getCreatedAt().compareTo(o2.getCreatedAt()))
+                .toList();
+        System.out.println(sortedOrders);
     }
 }
